Improving head implementation.  Required slides now output

--- a/test/templates/program_header.tex
+++ b/test/templates/program_header.tex
@@ -2,14 +2,16 @@
 \pagestyle{empty}
 \usepackage{latexsym,exscale}
 \usepackage{amssymb,amsmath,amsfonts}
-%\usepackage[latin1]{inputenc}
 \usepackage[utf8]{inputenc}
 \usepackage{longtable}
 \usepackage{array}
 \usepackage{multirow}
-\usepackage{wrapfig}
-\usepackage{url}
+%\usepackage{wrapfig}
+%\usepackage{url}
 \usepackage{graphicx}
+\usepackage{graphbox}
+\usepackage{multicol}
+
 
 \setlength{\topmargin}{-1.5cm}
 \setlength{\textheight}{22.6cm}
@@ -21,8 +23,14 @@
 
 \begin{document}
 
-\begin{figure}[h!]
-  \centering
-  \includegraphics[width=\textwidth]{header/header_2019.pdf}
-\end{figure}
-
+\begin{multicols}{2}
+\null\vfill
+\includegraphics[width=0.5\textwidth]{header/CITA_FullColour_Horizontal}
+\vfill\null
+\columnbreak
+\null\vfill
+\begin{center}
+  {\bf\huge JAMBOREE 2020}
+\end{center}
+\vfill\null
+\end{multicols}
